# hello-metal

./: .gitignore  AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  NEWS  README  acpi.c  acpi.h  acpi_struct.h  apic.c  apic.h  bootloader.h  configure.ac  cpuid.c  cpuid.h  cpuio.c  cpuio.h  em64t.c  em64t.h  entry.S  gdt.c  gdt.h  hello_metal  hlt.c  hlt.h  interrupt.c  interrupt.h  interrupt_stub.S  kbd.c  kbd.h  main.c  mem.c  mem.h  msr.c  msr.h  multiboot.S  multiboot.c  multiboot.h  (+13 more)
grub/: test_module
grub/boot/grub/: grub.cfg
